# netcdf-c

./: .gitignore  CDF5.README  CMakeLists.txt  Makefile.am  cf  cf.cmake  config.h.cmake.in  configure.ac
docs/: guide.dox  install.md
examples/C/: Makefile.am  parallel_vara.c
include/: Makefile.am  nc3internal.h  nc4internal.h  nc5dispatch.h  nc5internal.h  ncconfigure.h  ncdispatch.h  netcdf.h
libdispatch/: dcopy.c  derror.c  dfile.c  dv2i.c  dvarput.c  nc.c
liblib/: CMakeLists.txt  Makefile.am  stub.c
libsrc/: attr.m4  mmapio.c  nc3internal.c  ncx.h  ncx.m4  putget.m4  v1hpg.c  var.c
libsrc4/: nc4file.c  nc4hdf.c  nc4var.c
libsrc5/: CMakeLists.txt  Makefile.am  depend  nc5attr.m4  nc5dim.c  nc5dispatch.c  nc5internal.c  nc5ncx.h  nc5ncx.m4  nc5putget.c  nc5putget.m4  nc5v1hpg.c  nc5var.c
nc5_test/: Makefile.am  large_files.c  nc_test.c  quick_large_files.c  t_nc.c  test_get.c  test_get.m4  test_put.c  test_put.m4  test_read.c  tests.h  tst_atts.c  tst_atts3.c  tst_big_rvar.c  tst_big_var.c  tst_big_var2.c  tst_big_var6.c  tst_misc.c  tst_names.c  tst_nofill.c  tst_nofill2.c  tst_nofill3.c  tst_norm.c  tst_small.c
nc_test/: Makefile.am  nc_test.c  t_nc.c  test_put.m4  test_read.c  test_write.c  tst_atts.c  tst_atts3.c  tst_meta.c  tst_misc.c  tst_nofill.c  tst_norm.c  tst_parallel2.c  util.c
nc_test4/: CMakeLists.txt  Makefile.am  bm_file.c  tst_converts.c  tst_files.c
ncdump/: Makefile.am  nccopy.c  ncdump.c  tst_64bit.sh  tst_formatx3.sh  tst_lengths.sh
ncgen/: Makefile.am  genc.c  genlib.h  main.c  ncgen.h  run_tests.sh  semantics.c
nctest/: driver.c
